--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -95,7 +95,7 @@
 }
 @media (max-width: 500px) {
     .content-body h2 {
-        font-size: 2.6rem;
+        font-size: 3rem;
     }
 }
 
@@ -106,7 +106,7 @@
 }
 @media (max-width: 500px) {
     .content-body h3 {
-        font-size: 2.2rem;
+        font-size: 2.5rem;
     }
 }
 
